# simphony-catalytic

./: .compile  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
examples/: catalyticfoam_example.py  co_pt111_full.json  co_pt111_full.py  example_co_model.json
osp/dictionaries/ams/: co_pt111_from_meso.json  co_pt111_full.json
osp/dictionaries/catalyticFoam/: COModel.json
osp/dictionaries/catalyticFoam/laminar_2D_ML/: CatalyticReactors  ml_ExtraTrees_forCFD.pkl
osp/dictionaries/catalyticFoam/laminar_2D_ML/0/: Rh_s_  T  U  Ydefault  p  thetaDefault
osp/dictionaries/catalyticFoam/laminar_2D_ML/constant/: isatOptions  solverOptions  thermophysicalProperties  turbulenceProperties
osp/dictionaries/catalyticFoam/laminar_2D_ML/constant/polyMesh/: boundary  faces  neighbour  owner  points
osp/dictionaries/catalyticFoam/laminar_2D_ML/kinetic/: Kinetic.kin  Surface.sur
osp/dictionaries/catalyticFoam/laminar_2D_ML/kinetic/kinetics/: Kinetics_Summary.out  SurfaceSummary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kineticOF  kinetics.surface.xml  (+4 more)
osp/dictionaries/catalyticFoam/laminar_2D_ML/system/: blockMeshDict  controlDict  createBafflesDict  decomposeParDict  flowRatePatch  fvSchemes  fvSolution  pressureDifferencePatch  setFieldsDict  topoSetDict
osp/dictionaries/catalyticFoam/templates/: U  p  template_chem
osp/models/catalytic/: co_catalyticfoam.py  utils.py
osp/models/multiscale/: __init__.py  co_pt111_full.py
osp/models/settings/: general.py
osp/models/utils/: general.py
osp/wrappers/simcatalyticfoam/: catalyticfoam_engine.py  parsers.py  settings.py  simcatalyticfoam.py  utils.py
tests/: conftest.py  test_catalyticfoam.py  test_catalyticfoam_model.py  test_comodel.py  test_model_utils.py  utils.py
tests/test_files/: input.ttl  test.tar
