[metadata]
name = simphony-catalytic
version = v1.0.0
author = Matthias Büschelberger
author_url = matthias.bueschelberger@iwm.fraunhofer.de
description = SimPhoNy wrapper for CatalyticFoam
keywords = simphony, cuds, OpenFOAM, CatalyticFoam, ReaxPro
long_description = file: README.md
license = GPL-3
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pydantic<2.0.0
    osp-core>=3.8.0
    wheel>=0.30.0
    numpy
    scikit-learn>=0.22.2,<1
    joblib==1.1.0
    parsimonious
    arcp>=0.2.1
    minio>=7.1.15
    reaxpro-wrappers>=1.6.1
python_requires = >3.7, <3.11
include_package_data = True
package_dir =
    =.


[options.extras_require]
dev =
    bumpver==2021.1114
    dunamai==1.7.0
pre_commit =
    pre-commit
tests =
    pytest
    pytest-cov
    pytest-mock


[options.package_data]
osp.dictionaries =
    ams/*
    catalyticFoam/*
    catalyticFoam/templates/*
    catalyticFoam/laminar_2D_ML/*
    catalyticFoam/laminar_2D_ML/0/*
    catalyticFoam/laminar_2D_ML/kinetic/*
    catalyticFoam/laminar_2D_ML/kinetic/kinetics/*
    catalyticFoam/laminar_2D_ML/constant/*
    catalyticFoam/laminar_2D_ML/constant/polyMesh/*
    catalyticFoam/laminar_2D_ML/system/*

[bumpver]
current_version = "v0.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    version = {version}

[coverage:run]
branch = True
source = osp

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html
norecursedirs=tests/helpers
